# CCT-Harmonics-Optimizer

./: .gitignore  CMakeLists.txt  README.md  abstract__objective_8hh.html  abstract__objective_8hh.js  abstract__objective_8hh__dep__incl.map  abstract__objective_8hh__dep__incl.md5  abstract__objective_8hh__incl.map  abstract__objective_8hh__incl.md5  abstract__objective_8hh_source.html  abstract__optimizer_8cpp.html  abstract__optimizer_8cpp__incl.map  abstract__optimizer_8cpp__incl.md5  abstract__optimizer_8h.html  abstract__optimizer_8h.js  abstract__optimizer_8h__dep__incl.map  abstract__optimizer_8h__dep__incl.md5  abstract__optimizer_8h__incl.map  abstract__optimizer_8h__incl.md5  abstract__optimizer_8h_source.html  an__objective_8hh.html  an__objective_8hh.js  an__objective_8hh__dep__incl.map  an__objective_8hh__dep__incl.md5  an__objective_8hh__incl.map  an__objective_8hh__incl.md5  an__objective_8hh_source.html  an__optimizer_8cpp.html  an__optimizer_8cpp__incl.map  an__optimizer_8cpp__incl.md5  an__optimizer_8h.html  an__optimizer_8h.js  an__optimizer_8h__dep__incl.map  an__optimizer_8h__dep__incl.md5  an__optimizer_8h__incl.map  an__optimizer_8h__incl.md5  an__optimizer_8h_source.html  annotated.html  annotated_dup.js  bn__objective_8hh.html  (+192 more)
.github/workflows/: doxygen.yml
data/: .gitkeep  Sextupole_V18_2_smooth.json  cct.json  model.json  quad_double_HTS_3mm_22_5_ole_nokink_optimized_V03.json  quad_double_HTS_3mm_22_5_ole_nokink_optimized_V03_test.json  quad_double_HTS_3mm_22_5_ole_nokink_optimized_V04.json
doxygen/: Doxyfile  mainpage.dox
examples/: cct.json
googletest-download/: CMakeLists.txt.in
include/: Logger.hh  SilentLog.hh  abstract_objective.hh  abstract_optimizer.h  an_objective.hh  an_optimizer.h  bn_objective.hh  bn_optimizer.h  constants.h  fitted_slope_objective.hh  grid_search.h  grid_search_optimizer.h  grid_search_result.h  harmonics_calculator.h  harmonics_data_handler.h  harmonics_handler.h  input_output.h  linear_optimizer.h  mesh_data_handler.h  model_calculator.h  model_handler.h  objective_function.h  optimizer.h  optimizer_bindings.h  statistical_analysis.h
scripts/: bayesian_optimization.py  bo_minimize_slope.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+26 more)
src/: abstract_optimizer.cpp  an_optimizer.cpp  bn_optimizer.cpp  cct.cpp  constants.cpp  grid_search.cpp  grid_search_optimizer.cpp  harmonics_calculator.cpp  harmonics_data_handler.cpp  harmonics_handler.cpp  input_output.cpp  linear_optimizer.cpp  main.cpp  mesh_data_handler.cpp  model_calculator.cpp  model_handler.cpp  objective_function.cpp  optimizer.cpp  optimizer_bindings.cpp  statistical_analysis.cpp
test/: harmonics_handler_test.cpp  test_abstract_optimizer.cpp  test_an_optimizer.cpp  test_bn_optimizer.cpp  test_chi_squared.cpp  test_grid_search.cpp  test_grid_search_optimizer.cpp  test_harmonic_drive_parameter.cpp  test_harmonics_calculator.cpp  test_harmonics_handler.cpp  test_model_handler.cpp  test_objective_function.cpp  test_statistical_analysis.cpp
test_data/: quad_double_test_B1unoptimized.json  quad_test_all_linear_noBinormal.json  quad_test_no10_noBinormal.json  quad_test_unoptimized_allA_linear_noBinormal.json  quad_test_unoptimized_allA_noBinormal.json
